# ITKTotalVariation

./: .gitmodules  CMakeLists.txt  README.rst  itk-module-init.cmake  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build-test-package.yml  clang-format-linter.yml
examples/: CMakeLists.txt  ProxTV.cxx  runProxTVImageFilter.cxx
include/: itkMinimalStandardRandomVariateGenerator.h  itkMyFilter.h  itkMyFilter.hxx  itkNormalDistributionImageSource.h  itkProxTV.h  itkProxTV.hxx  itkProxTVImageFilter.h  itkProxTVImageFilter.hxx
src/: CMakeLists.txt
test/: CMakeLists.txt  azure-pipelines.yml  itkMyFilterTest.cxx  itkProxTVImageFilterTest.cxx  itkProxTVTest.cxx
wrapping/: itkMyFilter.wrap  itkProxTV.wrap  itkProxTVImageFilter.wrap
